# gimo-noc-chatbot

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
app_streamlit/: app.py  utils.py
noc_prototype/: app.py  chat_engine.py  config.py  document_loader.py  embeddings.py  initialize_db.py  setup_nltk.py  test_query.py  utils.py  vector_store.py
noc_prototype/static/: style.css
tests/: conftest.py  test_app.py  test_chat_engine.py  test_document_loader.py
